# modal

./: .gitignore  Cargo.toml  LICENSE  README.md  bundler.toml
.github/workflows/: build.yml  clippy.yml  readme-Linux.txt  readme-Windows.txt  readme-macOS.txt
crates/modal/: Cargo.toml
crates/modal-bin/: Cargo.toml
crates/modal-bin/src/: main.rs  rodio_out.rs
crates/modal-editor/: Cargo.toml
crates/modal-editor/src/: lib.rs
crates/modal-lib/: Cargo.toml
crates/modal-lib/src/: editor.rs  graph.rs  lib.rs  remote.rs
crates/modal-lib/src/compute/inputs/: angle.rs  freq.rs  gain.rs  gate.rs  midi.rs  mod.rs  time.rs  trigger.rs  wave.rs
crates/modal-lib/src/compute/nodes/: mod.rs
crates/modal-lib/src/compute/nodes/basic/: add.rs  adsr.rs  any.rs  bpm.rs  constant.rs  curve.rs  delay.rs  expr.rs  extern_input_reader.rs  gain.rs  gate.rs  latch.rs  mix.rs  mix2.rs  mod.rs  on_beat.rs  oscillator.rs  pulse.rs  transform.rs
crates/modal-lib/src/compute/nodes/basic/delay/: delay_impl.rs
crates/modal-lib/src/compute/nodes/effects/: bits.rs  buffer_repeat.rs  glide.rs  mod.rs  pitch_shift.rs  reverb.rs  reverse_delay.rs
crates/modal-lib/src/compute/nodes/filters/: biquad.rs  iir.rs  mod.rs  one_zero.rs  pole_zero.rs
crates/modal-lib/src/compute/nodes/instruments/: banded.rs  blow_hole.rs  mod.rs  twang.rs
crates/modal-lib/src/compute/nodes/midi/: fluidlite.rs  midi_cc.rs  mod.rs  one_note.rs  polyphonic.rs  source.rs
crates/modal-lib/src/compute/nodes/midi/source/: extern_.rs  jack.rs  null.rs  smf.rs
crates/modal-lib/src/compute/nodes/noise/: mod.rs
crates/modal-lib/src/editor/: tree.rs
crates/modal-lib/src/remote/: rodio_out.rs  stream_audio_out.rs
crates/modal-lib/src/scope/: float.rs  midi.rs  mod.rs
crates/modal-lib/src/util/: mod.rs
crates/modal-plugin/: Cargo.toml  LICENSE
crates/modal-plugin/src/: lib.rs  main.rs  stream_audio_out.rs  synth_app.rs
crates/modal/src/: graph.rs  main.rs  remote.rs
crates/modal/src/compute/: mod.rs
crates/modal/src/compute/inputs/: beat.rs  freq.rs  gate.rs  percentage.rs  positive.rs  real.rs  slider.rs  wave.rs
crates/modal/src/compute/node/: mod.rs
crates/modal/src/compute/node/basic/: add.rs  any.rs  bpm.rs  convert.rs  difference.rs  expr.rs  gate.rs  mix.rs  mix2.rs  on_beat.rs  pulse.rs
crates/modal/src/compute/node/effects/: bits.rs  chorus.rs  clip.rs  glide.rs  heart.rs  reverb.rs  reverse_delay.rs
crates/modal/src/compute/node/filters/: biquad.rs  mod.rs  pole_zero.rs
crates/modal/src/compute/node/inputs/: freq.rs  gate.rs  mod.rs  percentage.rs  positive.rs  real.rs  time.rs  wave.rs
crates/modal/src/compute/node/instruments/: banded.rs  twang.rs
crates/modal/src/compute/node/midi/: fluidlite.rs  mod.rs  source.rs
crates/modal/src/compute/node/midi/source/: jack.rs  null.rs
crates/modal/src/compute/nodes/basic/: add.rs  adsr.rs  any.rs  bpm.rs  constant.rs  convert.rs  curve.rs  delay.rs  difference.rs  expr.rs  gain.rs  gate.rs  latch.rs  mix.rs  mix2.rs  on_beat.rs  oscillator.rs  pulse.rs  transform.rs
crates/modal/src/compute/nodes/effects/: bits.rs  chorus.rs  clip.rs  glide.rs  heart.rs  mod.rs  reverb.rs  reverse_delay.rs
crates/modal/src/compute/nodes/filters/: biquad.rs  iir.rs  one_zero.rs  pole_zero.rs
crates/modal/src/compute/nodes/instruments/: banded.rs  blow_hole.rs  twang.rs
crates/modal/src/compute/nodes/midi/: fluidlite.rs  one_note.rs  source.rs
crates/modal/src/compute/nodes/noise/: mod.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs  node.rs  util.rs
midi/: readme
sf_/: GuitarA.sf2  README.md
src/: graph.rs  main.rs  remote.rs  wave.rs
src/compute/: mod.rs
src/compute/node/: basic.rs  compose.rs  filter.rs  mod.rs  noise.rs
src/compute/node/basic/: add.rs  adsr.rs  any.rs  bpm.rs  constant.rs  convert.rs  curve.rs  delay.rs  gain.rs  gate.rs  latch.rs  mix.rs  mix2.rs  mod.rs  on_beat.rs  oscillator.rs  pulse.rs  transform.rs
src/compute/node/basic/delay/: delay_impl.rs
src/compute/node/effects/: chorus.rs  clip.rs  glide.rs  mod.rs  reverb.rs
src/compute/node/filters/: biquad.rs  iir.rs  mod.rs  one_zero.rs  pole_zero.rs
src/compute/node/inputs/: angle.rs  beat.rs  freq.rs  gate.rs  midi.rs  mod.rs  percentage.rs  positive.rs  real.rs  sig.rs  slider.rs  time.rs  trigger.rs  wave.rs
src/compute/node/instruments/: banded.rs  blow_hole.rs  mod.rs  twang.rs
src/compute/node/midi/: fluidlite.rs  freq.rs  mod.rs  one_note.rs  source.rs  vel.rs
src/compute/node/midi/source/: jack.rs  smf.rs
src/compute/node/noise/: mod.rs
src/compute/node/output/: mod.rs
src/jack/: mod.rs
src/midi/: mod.rs
src/node/: basic.rs  compose.rs  filter.rs  mod.rs
src/scope/: float.rs  midi.rs  mod.rs
src/util/: mod.rs
