[workspace]
members = ["crates/modal", "crates/runtime"]

[workspace.dependencies]
dyn-clone = "1.0.11"
eframe = { version = "=0.30.0", features = ["persistence"] }
midly = "0.5.3"
serde = { version = "1.0.160", features = ["derive", "rc"] }
strum = { version = "0.24.1", features = ["derive"] }
thunderdome = "0.6.0"
typetag = "0.2.7"