[workspace]
resolver = "2"
members = [
    "crates/modal-lib",
    "crates/modal-bin",
    "crates/modal-plugin",
    "crates/runtime",
]

[workspace.dependencies]
anyhow = "1.0.70"
dyn-clone = "1.0.11"
eframe = { version = "=0.31.0", features = ["persistence"] }
egui-graph-edit = { version = "0.5.3", features = ["persistence"] }
midly = "0.5.3"
rfd = "0.11.3"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
thunderdome = "0.6.0"
typetag = "0.2.7"
