[package]
edition = "2021"
name = "modal"
version = "0.1.0"

[dependencies]
eframe = {workspace = true}
egui-graph-edit = {version = "0.5.1", features = ["persistence"]}
rfd = "0.11.3"
serde = {workspace = true}
serde_json = "1.0.96"

modal-lib = {path = "../modal-lib"}
runtime = {path = "../runtime"}

[patch.crates-io]
egui-graph-edit = {git = "https://github.com/kamirr/egui-graph-edit"}
