[package]
edition = "2021"
name = "modal-lib"
version = "0.1.0"
license = "MIT"

[dependencies]
anyhow = { workspace = true }
atomic_enum = "0.3.0"
atomic_float = { version = "1.0.0", default-features = false, features = [
  "serde",
] }
bimap = "0.6.3"
derive_more = "0.99.17"
dyn-clone = { workspace = true }
eframe = { workspace = true }
egui-curve-edit = { git = "https://github.com/kamirr/egui-curve-edit", features = [
  "serde",
] }
egui-graph-edit = { workspace = true }
egui-knobs = { git = "https://github.com/kamirr/egui-knobs" }
egui_plot = "0.31.0"
fluidlite = { version = "0.2.1", features = ["bindgen"] }
image = "0.24.6"
itertools = "0.10.5"
jack = "0.11.4"
math-jit = "0.1.0"
midly = { workspace = true }
noise = "0.8.2"
num-complex = "0.4.6"
num-derive = "0.3"
num-traits = "0.2"
pid = "4.0.0"
rand = { version = "0.8.5", features = ["serde"] }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
rand_distr = "0.4.3"
rubato = "0.16.0"
rustfft = "6.1.0"
serde = { workspace = true }
serde-big-array = "0.5.1"
signalsmith-stretch = "0.1.1"
strum = { workspace = true }
thunderdome = { workspace = true }
typetag = { workspace = true }
wav = "1.0.0"

runtime = { path = "../runtime" }
