[package]
authors = ["Kamil Koczurek <koczurekk@gmail.com>"]
edition = "2021"
name = "modal-plugin"
version = "0.1.0"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
midly = { workspace = true }
barrage = "0.2.3"
modal-editor = { path = "../modal-editor" }
modal-lib = { path = "../modal-lib" }
nih_plug = { git = "https://github.com/rbmj/nih-plug", features = [
    "assert_process_allocs",
    "standalone",
] }
nih_plug_egui = { git = "https://github.com/rbmj/nih-plug" }
runtime = { path = "../runtime" }
serde = { workspace = true }
serde_json = { workspace = true }
typetag = { workspace = true }
