[package]
name = "modal"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_enum = "0.2.0"
atomic_float = { version = "1.0.0", default-features = false, features = [
    "serde",
] }
anyhow = "1.0.70"
bimap = "0.6.3"
derive_more = "0.99.17"
dyn-clone = { workspace = true }
eframe = { workspace = true }
egui-curve-edit = { git = "https://github.com/kamirr/egui-curve-edit", features = [
    "serde",
] }
egui-knobs = { git = "https://github.com/kamirr/egui-knobs" }
egui-graph-edit = { version = "0.5.1", features = ["persistence"] }
fluidlite = "0.2.1"
image = "0.24.6"
itertools = "0.10.5"
jack = "0.11.4"
math-jit = "0.1.0"
midly = { workspace = true }
noise = "0.8.2"
num-traits = "0.2"
num-derive = "0.3"
pid = "4.0.0"
rand = { version = "0.8.5", features = ["serde"] }
rand_distr = "0.4.3"
rfd = "0.11.3"
rodio = "0.17.1"
rustfft = "6.1.0"
strum = { workspace = true }
thunderdome = { workspace = true }
wav = "1.0.0"
serde = { workspace = true }
serde_json = "1.0.96"
typetag = { workspace = true }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
rubato = "0.16.0"
egui_plot = "0.30.0"
num-complex = "0.4.6"

runtime = { path = "../runtime" }

[patch.crates-io]
egui-graph-edit = { git = "https://github.com/kamirr/egui-graph-edit" }
